--- a/css/styles.css
+++ b/css/styles.css
@@ -76,3 +76,17 @@ ul li.checked::before {
 ul li:hover {
     background-color: #ddd;
 }
+
+
+
+.error {
+    background: #eb5814;
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+    max-width: 400px;
+    margin: 0 auto;
+    color: white;
+
+}
